src/public/css/home.less
.contact {
  background-color: #32424a;
  height: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.contact h1 {
  margin-right: 10px;
  color: #fff;
  font-size: 60px;
  text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.5);
  letter-spacing: -2px;
}

.description {
  display: flex;
  padding: 10px;
  justify-content: center;
  text-align: center;
  background: #eeeeee;
}

.col-des {
  padding: 5px;
  text-align: center;
  border-right: solid 1px #adadad;
  width: 30%;
}

.home-content {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  margin: 10px;
}

.activists {
  width: 25%;
  color: #333;
  background-color: #40AA54;
  margin: 10px;
  display: flex;
  flex-direction: column;
  padding: 10px;
  border: 1px solid #ccc;
  box-shadow: 0 0 5px rgba(0,0,0,0.3);
}

.telegram {
  background: #00bcd4;
  padding: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 22px;
  height: 100px;

  a {
       color: #fff;
       transition: 0.2s;

       &:hover {
         color: #555;
       }
  }

  img {
    width: 45px;
    margin-right: 10px;
  }
}

.tel {
  display: flex;
  align-items: center;
  margin-top: 10px;
  padding: 5px;
}

.tel2 {
  margin-top: 20px;
  text-align: center;
  padding: 5px;
  background: #00bcd4;

  span {
    font-size: 17px;
  }
  a {
    cursor: pointer;
    color: #fff;

    &:hover {
      color: darken(#fff, 10%);
    }
  }
}

.last-posts {
  width: 80%;
  margin: 10px;
  background-color: #fff;
  box-shadow: 0 0 5px rgba(0,0,0,0.3);
  border: 1px solid #ccc;
}

.last-posts h3 {
  background: #40AA54;
  text-align: center;
  color: #fff;
  padding: 5px;
}

.latset-posts {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.conference-banner {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 10px;
  background-color: #324b85;
  height: 50px;
  display: flex;
  color: #FFF;
  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);

  span {
    font-size: 22px;
    letter-spacing: -.5px;
  }

  button {
    background: #2b2b2b;
    border: 2px solid #2b2b2b;
    border-radius: 5px;
    color: #fff;
    padding: 5px 10px;
    width: 150px;
    height: 50px;
    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
    font-size: 17px;
    cursor: pointer;
    transition: 0.3s;

    &:hover {
      background: transparent;
      color:#fff;
    }
    &:active {
      background: darken(#324b85, 10%);
    }
  }
}

.about-us {
  color: #eee;

  &:hover {
    color: white;
  }
}

@media (min-width: 120px) and (max-width: 500px) {
  .description {
    flex-direction: column;
    text-align: center;
  }

  .col-des {
    width: 100%;
    border: none;
    padding: 0;
    margin-bottom: 5px;
    padding-bottom: 10px;
    border-bottom: solid 1px #919191;
  }

  .home-content {
    flex-direction: column;
    justify-content: center;
  }

  .activists {
    width: 100%;
    margin: 0;
  }

  .person {
    justify-content: center;
  }

  .last-posts {
    width: 100%;
    margin: 0;
  }

  .view-btn {
    border: none;
  }

  .contact {
    flex-direction: column;
  }

.conference-banner {
  flex-direction: column;
  height: 150px;
  text-align: center;
}

}

